--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
@@ -10,10 +11,16 @@
   },
   "dependencies": {
     "bech32": "^1.1.3",
+    "bip66": "^1.1.5",
     "buffer": "^5.4.3",
+    "debounce": "^1.2.0",
+    "is-buffer": "^2.0.4",
     "safe-buffer": "^5.2.0",
-    "secp256k1": "^3.7.1",
+    "sha.js": "^2.4.11",
+    "stream": "^0.0.2",
+    "string_decoder": "^1.3.0",
     "svelte-spa-router": "^1.2.1",
+    "tiny-secp256k1": "^1.1.3",
     "toastify-js": "^1.6.1"
   }
 }
