--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bip66": "^1.1.5",
     "buffer": "^5.4.3",
     "debounce": "^1.2.0",
+    "elliptic": "^6.5.2",
     "is-buffer": "^2.0.4",
     "safe-buffer": "^5.2.0",
+    "secp256k1": "^4.0.1",
     "sha.js": "^2.4.11",
     "stream": "^0.0.2",
     "string_decoder": "^1.3.0",
