--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "prettier-plugin-svelte": "^0.7.0",
-    "rollup": "^1.12.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
-    "svelte": "^3.0.0"
+    "rollup": "^1.32.1",
+    "rollup-plugin-svelte": "^6.1.1",
+    "rollup-plugin-terser": "latest",
+    "svelte": "^3.29.7"
   },
   "dependencies": {
-    "bech32": "^1.1.3",
+    "bech32": "^1.1.4",
     "bip66": "^1.1.5",
-    "buffer": "^5.4.3",
+    "buffer": "^5.7.1",
     "debounce": "^1.2.0",
-    "elliptic": "^6.5.2",
-    "safe-buffer": "^5.2.0",
+    "elliptic": "^6.5.3",
+    "safe-buffer": "^5.2.1",
     "sha.js": "^2.4.11",
     "stream": "^0.0.2",
     "string_decoder": "^1.3.0",
-    "svelte-spa-router": "^1.2.1",
-    "toastify-js": "^1.6.1"
+    "svelte-spa-router": "^1.3.0",
+    "toastify-js": "^1.9.3"
   }
 }
